featured: файлы security и AuthController для тестирования через postman